--- a/package.json
+++ b/package.json
@@ -42,8 +42,7 @@
   },
   "dependencies": {
     "concurrently": "^5.1.0",
-    "ts-node": "^3.3.0",
-    "typescript": "^2.4.2"
+    "ts-node": "^3.3.0"
   },
   "devDependencies": {
     "concurrently": "^5.1.0"
