--- a/browser/package.json
+++ b/browser/package.json
@@ -37,6 +37,7 @@
     "@kenrick95/c4": "4.0.0",
     "es6-promise": "^4.2.8",
     "ts-node": "^9.1.1",
+    "typescript": "^4.1.3",
     "url-search-params-polyfill": "^8.0.0"
   },
   "devDependencies": {
