--- a/browser/package.json
+++ b/browser/package.json
@@ -36,7 +36,7 @@
   "dependencies": {
     "@kenrick95/c4": "4.0.0",
     "es6-promise": "^4.2.8",
-    "ts-node": "^9.1.1",
+    "ts-node": "5.0.1",
     "typescript": "^4.1.3",
     "url-search-params-polyfill": "^8.0.0"
   },
