--- a/package.json
+++ b/package.json
@@ -1,14 +1,7 @@
 {
-  "name": "@kenrick95/c4-root",
-  "version": "0.0.0",
-  "description": "Connect Four game",
-  "main": "./dist/lib.js",
-  "private": true,
-  "workspaces": [
-    "core",
-    "browser",
-    "server"
-  ],
+  "name": "@kenrick95/c4-browser",
+  "version": "1.0.0",
+  "description": "Connect Four game in browser",
   "repository": {
     "type": "git",
     "url": "https://github.com/kenrick95/c4.git"
@@ -21,9 +14,6 @@
   "bugs": {
     "url": "https://github.com/kenrick95/c4/issues"
   },
-  "engines": {
-    "node": "12.x"
-  },
   "homepage": "https://github.com/kenrick95/c4",
   "license": "MIT",
   "keywords": [
@@ -31,19 +21,33 @@
     "connect-four",
     "game"
   ],
+  "main": "./dist/index.html",
+  "source": "./src/app.ts",
   "files": [
-    "src/",
     "dist/"
   ],
   "scripts": {
-    "start": "concurrently --handle-input \"yarn:start-server\" \"yarn:start-browser\"",
-    "start-browser": "yarn workspace @kenrick95/c4-browser start",
-    "start-server": "yarn workspace @kenrick95/c4-server start-dev"
+    "start": "parcel src/index.html",
+    "build": "yarn clean && parcel build src/index.html",
+    "build-gh-pages": "yarn clean && parcel build src/index.html --public-url \"https://kenrick95.github.io/c4/dist/\"",
+    "prettier": "prettier --write \"./**/*.?(ts|html|scss|css)\"",
+    "clean": "shx rm -rf dist/"
   },
   "dependencies": {
-    "concurrently": "^5.1.0"    
+    "@kenrick95/c4": "4.0.0",
+    "es6-promise": "^4.2.8",
+    "parcel": "^1.12.4",
+    "ts-node": "5.0.1",
+    "url-search-params-polyfill": "^8.0.0"
   },
   "devDependencies": {
-    "concurrently": "^5.1.0"
+    "@types/node": "^13.11.1",
+    "parcel-bundler": "^1.12.4",
+    "prettier": "^2.0.4",
+    "shx": "^0.3.2",
+    "typescript": "^3.8.3"
+  },
+  "resolutions": {
+    "minimist": "^1.2.2"
   }
 }
